firefox scrollbar fix

--- a/smallslive/static/sass/base/_base.scss
+++ b/smallslive/static/sass/base/_base.scss
@@ -2,22 +2,31 @@ html {
   overflow: scroll;
   overflow-x: hidden;
 }
+@-moz-document url-prefix() {
+  html,
+  body {
+    overflow: hidden !important;
+  }
+}
 html::-webkit-scrollbar {
-  width: 0px;  
-  background: transparent; 
+  width: 0px;
+  background: transparent;
 }
 html::-webkit-scrollbar-thumb {
-  background: #FF0000;
+  background: #ff0000;
 }
 body {
-  &.admin-header{
-    @media(max-width:$screen-xs-max) {
+  &.admin-header {
+    @media (max-width: $screen-xs-max) {
       .pad-content {
         padding-top: 40px;
       }
     }
   }
-  @include background-image(url("../image/header_bg.jpg"), url("../image/background-tile.png"));
+  @include background-image(
+    url("../image/header_bg.jpg"),
+    url("../image/background-tile.png")
+  );
   background-position: center top, 0 0;
   background-repeat: no-repeat, repeat;
   background-size: 100% 404px, 10px 10px;
@@ -28,17 +37,19 @@ body {
   @media (max-width: $screen-md-max) {
     padding-top: 54px;
   }
-  .no-backgound{
+  .no-backgound {
     background-image: none;
   }
 }
-.hidden-body{
+.hidden-body {
   overflow: hidden;
 }
-button, input[type="submit"] {
+button,
+input[type="submit"] {
   border: none;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     outline: none;
   }
 }
@@ -52,7 +63,7 @@ button, input[type="submit"] {
     box-shadow: none;
   }
 }
-.pp-btn{
+.pp-btn {
   border: 0px;
   background: #f0f0eb;
 }
@@ -72,22 +83,18 @@ button, input[type="submit"] {
   background-color: #fff;
 }
 
-
 // equal height columns on large devices
 @media (min-width: $screen-md-min) {
   .equal-heights.row {
     // overflow: hidden;
     @include display(flex);
-
   }
 
-//  .equal-heights [class*="col-"] {
-//    margin-bottom: -99999px;
-//    padding-bottom: 99999px;
-//  }
+  //  .equal-heights [class*="col-"] {
+  //    margin-bottom: -99999px;
+  //    padding-bottom: 99999px;
+  //  }
 }
-
-
 
 .bw-wrapper {
   @include filter(grayscale(100%));
@@ -96,8 +103,10 @@ button, input[type="submit"] {
 .form-control:focus {
   border-color: rgba(254, 254, 254, 0.6);
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(254, 254, 254, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(254, 254, 254, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(254, 254, 254, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(254, 254, 254, 0.6);
 }
 
 a {
@@ -110,7 +119,7 @@ a:hover {
 }
 
 a:active {
-  color: rgba(254, 254, 254, 0.8) ;
+  color: rgba(254, 254, 254, 0.8);
   text-decoration: none;
   box-shadow: none;
   outline: none;
@@ -141,7 +150,7 @@ a:active {
   vertical-align: middle;
   padding: 50px 0;
 
-  @media(max-width:$screen-xs-max) {
+  @media (max-width: $screen-xs-max) {
     padding: 30px 0;
   }
 }
@@ -185,16 +194,16 @@ a:active {
 }
 
 p.unavailable {
-    opacity: 0.6;
-    font-style: italic;
-  }
+  opacity: 0.6;
+  font-style: italic;
+}
 
 .alert-dismissible {
   margin-bottom: 3px;
 }
 
 .content-wrapper {
-  border: 10px solid rgba(31,31,31,0.07);
+  border: 10px solid rgba(31, 31, 31, 0.07);
   border-top: none;
   margin-right: auto;
   margin-left: auto;
@@ -205,7 +214,6 @@ p.unavailable {
   font-size: 12px;
   color: $main-accent-color;
 }
-
 
 @media (max-width: 740px) {
   .content-wrapper {
@@ -236,39 +244,36 @@ p.unavailable {
   }
 }
 
-
 .badge.header-user {
   margin-left: 5px;
   font-size: 10px;
 }
 
 .equal-heights-xs {
-
-  @media(max-width:$screen-xs-max) {
+  @media (max-width: $screen-xs-max) {
     @include display(flex);
     @include flex-wrap(wrap);
 
-    &:before, &:after {
+    &:before,
+    &:after {
       display: none;
     }
   }
 }
 
 @for $i from 1 through 8 {
-
   body.headers-#{$i} {
-    &.admin-header{
-      @media(max-width:$screen-xs-max) {
+    &.admin-header {
+      @media (max-width: $screen-xs-max) {
         .pad-content {
           padding-top: $mobile-bar-height * $i + 30px;
         }
       }
-    }  
-    @media(max-width:$screen-xs-max) {
+    }
+    @media (max-width: $screen-xs-max) {
       .pad-content {
         padding-top: $mobile-bar-height * $i;
       }
     }
   }
 }
-
